docs: update function for repository